[gd_scene load_steps=13 format=3 uid="uid://ch47nd3iei8k7"]

[ext_resource type="Script" uid="uid://beaf3hr6264to" path="res://game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://bs1hu7lpdivca" path="res://lvl/lvl.tscn" id="2_iotsf"]
[ext_resource type="Script" uid="uid://b8aclcm6ewxmq" path="res://ui/HUD/heath_bar.gd" id="3_fc0e3"]
[ext_resource type="PackedScene" uid="uid://bh5o0r5ut5y0d" path="res://lvl/map/map.tscn" id="3_ryrav"]
[ext_resource type="Script" uid="uid://bhda77d0hjhi2" path="res://ui/right_side.gd" id="4_mfdv2"]
[ext_resource type="Texture2D" uid="uid://ca4ax3by7oabn" path="res://ui/img/metal.png" id="5_7jktm"]
[ext_resource type="Script" uid="uid://d1pnprmds7e2g" path="res://ui/zoom_slider.gd" id="6_eow3j"]
[ext_resource type="Script" uid="uid://chmfum2qqdak5" path="res://ui/point_count.gd" id="8_hve3p"]
[ext_resource type="PackedScene" uid="uid://u83wwivbovfd" path="res://ui/menu/menu_container.tscn" id="8_j5wjh"]
[ext_resource type="Script" uid="uid://orvcs75vjfdf" path="res://ui/menu/pause_panel.gd" id="8_vef74"]
[ext_resource type="Script" uid="uid://clm5y8mhfbomc" path="res://lvl/question.gd" id="10_lc2xo"]
[ext_resource type="Script" uid="uid://cpmgc4pk12uyt" path="res://ui/touch_esc.gd" id="12_iotsf"]

[node name="Game" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_80nbo")

[node name="Center" type="SubViewportContainer" parent="." groups=["columns"]]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.0
offset_right = 536.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Center"]
handle_input_locally = false
size = Vector2i(697, 1080)
size_2d_override = Vector2i(1080, 1920)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="GameLevel" parent="Center/SubViewport" instance=ExtResource("2_iotsf")]
unique_name_in_owner = true

[node name="LeftSide" type="TextureRect" parent="." groups=["columns"]]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.347222
anchor_bottom = 1.0
grow_vertical = 2
texture = ExtResource("5_7jktm")
expand_mode = 4
metadata/_edit_use_anchors_ = true

[node name="RightSide" type="TextureRect" parent="." groups=["columns"]]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 360.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_7jktm")
expand_mode = 4
flip_h = true
script = ExtResource("4_mfdv2")

[node name="TextureRect" type="TextureRect" parent="RightSide"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="HexTileController" parent="RightSide/TextureRect" instance=ExtResource("3_ryrav")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158333
anchor_top = 0.133333
anchor_right = 0.733333
anchor_bottom = 0.814815
metadata/_edit_use_anchors_ = true

[node name="HSlider" type="HSlider" parent="RightSide/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0416718
anchor_top = 0.328704
anchor_right = 0.0416718
anchor_bottom = 1.11204
offset_left = 15.9981
offset_right = 852.998
offset_bottom = -821.0
grow_horizontal = 2
grow_vertical = 0
rotation = 1.57079
focus_mode = 1
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1
script = ExtResource("6_eow3j")
metadata/_edit_use_anchors_ = true

[node name="StartLevelButton" type="Button" parent="RightSide/TextureRect"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.638889
anchor_top = 0.834259
anchor_right = 0.755556
anchor_bottom = 0.862963
text = "GO!"
metadata/_edit_use_anchors_ = true

[node name="RightHide" type="Button" parent="RightSide"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 18.0
grow_vertical = 2
text = ">"

[node name="HUD" type="TextureRect" parent="."]
unique_name_in_owner = true
clip_children = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0509259
anchor_top = 0.0527778
anchor_right = 0.294444
anchor_bottom = 0.246296
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
modulate = Color(1, 1, 1, 0.878431)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.158
anchor_right = 0.896
anchor_bottom = 0.825
offset_left = -0.142002
offset_top = 0.0859985
offset_right = -0.0960083
offset_bottom = 0.0249939
alignment = 1

[node name="HealthBar2" type="ProgressBar" parent="HUD/VBoxContainer"]
self_modulate = Color(0, 0.643305, 0.0462931, 1)
layout_mode = 2
size_flags_vertical = 3
step = 1.0
rounded = true
show_percentage = false
script = ExtResource("3_fc0e3")

[node name="EnergyBar2" type="ProgressBar" parent="HUD/VBoxContainer"]
self_modulate = Color(0, 0.254902, 0.909804, 1)
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
show_percentage = false
script = ExtResource("3_fc0e3")
data_type = "energy"

[node name="PointCount" type="Label" parent="HUD/VBoxContainer"]
layout_mode = 2
text = "0 pts"
horizontal_alignment = 2
script = ExtResource("8_hve3p")

[node name="PauseSide" type="Button" parent="HUD/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "<<<"

[node name="Question" type="RichTextLabel" parent="HUD" groups=["PORTALS"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0972222
anchor_top = 0.15625
anchor_right = 0.902778
anchor_bottom = 0.839286
offset_left = 2.43056
offset_top = 0.34375
offset_right = 29.5694
offset_bottom = 0.589218
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Question
"
fit_content = true
horizontal_alignment = 1
script = ExtResource("10_lc2xo")

[node name="ColorRect" type="ColorRect" parent="HUD/Question"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Question"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Answer1" type="Label" parent="HUD/Question/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.0117647, 1, 1)
text = "GOOD"
horizontal_alignment = 1

[node name="Answer2" type="Label" parent="HUD/Question/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.784314, 0, 1)
text = "BAD"
horizontal_alignment = 1

[node name="Answer3" type="Label" parent="HUD/Question/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.760784, 1, 0.0509804, 1)
text = "BAD"
horizontal_alignment = 1

[node name="PausePanel" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
top_level = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)
script = ExtResource("8_vef74")

[node name="MenuContainer" parent="PausePanel" instance=ExtResource("8_j5wjh")]
layout_mode = 1

[node name="TouchEsc" type="Button" parent="."]
process_mode = 3
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.944444
anchor_top = 0.944444
anchor_right = 0.990741
anchor_bottom = 0.990741
grow_horizontal = 0
grow_vertical = 0
focus_mode = 1
text = "ESC"
script = ExtResource("12_iotsf")
metadata/_edit_use_anchors_ = true

[connection signal="resized" from="RightSide" to="RightSide" method="_on_resized"]
[connection signal="value_changed" from="RightSide/TextureRect/HSlider" to="RightSide/TextureRect/HSlider" method="_on_value_changed"]
[connection signal="pressed" from="RightSide/TextureRect/StartLevelButton" to="." method="_on_start_level_button_pressed"]
[connection signal="pressed" from="RightSide/RightHide" to="RightSide" method="_on_right_hide_pressed"]
[connection signal="pressed" from="HUD/VBoxContainer/PauseSide" to="." method="_on_pause_side_pressed"]
[connection signal="button_down" from="TouchEsc" to="TouchEsc" method="_on_button_down"]
[connection signal="button_up" from="TouchEsc" to="TouchEsc" method="_on_button_up"]
[connection signal="pressed" from="TouchEsc" to="TouchEsc" method="_on_pressed"]
